@@ -4,6 +4,9 @@ All Three Parts
 Overall balancing for EET mega-mod installations
 Successful regression testing of previous beta versions
 
+Tea With Landrin added
+Sandrah/Szass in Neera ToB quest added
+
 VERSION 2.03b
 -----------------
 
